--- a/BILSTM_CRF_v2.ipynb
+++ b/BILSTM_CRF_v2.ipynb
@@ -10,6 +10,8 @@
     "import pandas as pd\n",
     "import json\n",
     "from future.utils import iteritems\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.utils import to_categorical\n",
     "from sklearn.model_selection import train_test_split\n",
     "from keras.models import Model, Input\n",
     "from keras.layers import LSTM, Embedding, Dense, TimeDistributed, Dropout, Bidirectional\n",
@@ -94,6 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "input_dict = get_input_dict()\n",
     "# List with possible tags\n",
     "tags = ['B-geo', 'B-tim', 'I-gpe', 'I-art', 'B-per', 'I-eve', 'B-gpe', 'I-geo', 'B-eve', 'I-nat', 'B-nat', 'I-org', 'I-tim', 'I-per', 'B-org', 'B-art', 'O']\n",
     "tags_without_O = tags[:-1]\n",
@@ -110,8 +113,7 @@
     "tag_indices = {t: idx for idx, t in enumerate(tags)}\n",
     "indices_to_tag = {v: k for k, v in iteritems(tag_indices)}\n",
     "\n",
-    "# The input dictionary that containes the preprocessed dataset\n",
-    "input_dict = get_input_dict()"
+    "# The input dictionary that containes the preprocessed dataset\n"
    ]
   },
   {
