--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import json\n",
     "from sklearn import preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
@@ -17,8 +18,7 @@
     "                          BertTokenizer, TFBertForTokenClassification, BertConfig)\n",
     "from tqdm import tqdm\n",
     "import re\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "import json"
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tags = {'O':0, 'I-ORG':1, 'I-LOC':2, 'I-MISC':3, 'I-PER':4, 'B-MISC':5, 'B-LOC': 6, 'B-ORG':7, 'PAD':8}\n"
+    "tags = {'O':0, 'I-ORG':1, 'I-LOC':2, 'I-MISC':3, 'I-PER':4, 'B-MISC':5, 'B-LOC': 6, 'B-ORG':7, 'PAD':8}"
    ]
   },
   {
@@ -45,7 +45,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices_to_tags = {0:'O', 1:'I-ORG', 2:'I-LOC', 3:'I-MISC', 4:'I-PER', 5:'B-MISC', 6:'B-LOC', 7:'B-ORG', 8:'PAD'}\n"
+    "indices_to_tags = {0:'O', 1:'I-ORG', 2:'I-LOC', 3:'I-MISC', 4:'I-PER', 5:'B-MISC', 6:'B-LOC', 7:'B-ORG', 8:'PAD'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing of the CONLL-2003 dataset. This function is called only once at the beginning and then the dataset is saved to a json file."
    ]
   },
   {
@@ -132,6 +139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper functions:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 165,
    "metadata": {},
@@ -150,12 +164,62 @@
     "        # Add the tokenized word to the final tokenized word list\n",
     "        tokenized_sentence.extend(tokenized_word)\n",
     "\n",
-    "        # Add the same label to the new list of labels `n_subwords` times\n",
-    "#         labels.append(label)\n",
-    "#         labels.extend([tags[\"O\"]] * (n_subwords - 1))\n",
-    "        labels.extend([label] * n_subwords)\n",
+    "        # Add the corresponding tag to the first token of the word and \"PAD\" tag to the rest of the tokens\n",
+    "        labels.append(label)\n",
+    "        labels.extend([tags[\"O\"]] * (n_subwords - 1))\n",
+    "#         labels.extend([label] * n_subwords)\n",
     "\n",
     "    return tokenized_sentence, labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def example_to_features(input_ids, attention_masks, y):\n",
+    "    return {\"input_ids\": input_ids,\n",
+    "            \"attention_mask\": attention_masks}, y\n",
+    "\n",
+    "def example_to_features_list(input_ids, attention_masks, y):\n",
+    "    return [input_ids, attention_masks], y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def example_to_features_new(input_ids,attention_masks,token_type_ids,y):\n",
+    "    return {\"input_ids\": input_ids,\n",
+    "          \"attention_mask\": attention_masks,\n",
+    "          \"token_type_ids\": token_type_ids},y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_predictions(y_pred, indices_to_tags):\n",
+    "    conv_pred = []\n",
+    "    for pred in y_pred:\n",
+    "        conv_tmp = []\n",
+    "        for val in pred:\n",
+    "            val_arg_max = np.argmax(val)\n",
+    "            conv_tmp.append(val_arg_max)\n",
+    "        conv_pred.append(conv_tmp)\n",
+    "    return np.array(conv_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the pretrained Bert model and the Bert tokenizer."
    ]
   },
   {
@@ -179,17 +243,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 135,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def example_to_features(input_ids, attention_masks, y):\n",
-    "    return {\"input_ids\": input_ids,\n",
-    "            \"attention_mask\": attention_masks}, y\n",
-    "\n",
-    "def example_to_features_list(input_ids, attention_masks, y):\n",
-    "    return [input_ids, attention_masks], y"
+    "### Read the train and test dataset from file"
    ]
   },
   {
@@ -201,6 +258,35 @@
     "with open(\"parsed_sl_testa.json\") as test, open(\"parsed_sl_train.json\") as train:\n",
     "    test_df = json.load(test)\n",
     "    data = json.load(train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split the train dataset into train and validation sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_inputs, val_inputs, train_tags, val_tags = train_test_split(train_ids, train_tags,\n",
+    "#                                                             random_state=2018, test_size=0.1)\n",
+    "# train_masks, val_masks, _, _ = train_test_split(attention_masks_train, train_ids,\n",
+    "#                                              random_state=2018, test_size=0.1)\n",
+    "\n",
+    "\n",
+    "data_train, data_val = train_test_split(data, random_state=2018, test_size=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tokenize the three datasets, assign the appropriate labels to each token "
    ]
   },
   {
@@ -249,6 +335,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_texts_val = []\n",
+    "tokenized_labels_val = []\n",
+    "for sent_dict in tqdm(data_val, position=0, leave=True):\n",
+    "    sen, lab = tokenize_and_preserve_labels(sent_dict['sentences'], sent_dict['tags'])\n",
+    "    tokenized_texts_val.append(sen)\n",
+    "    tokenized_labels_val.append(lab)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pad each sequence up to the previously defined MAX_LEN = 180. Create the lists with attention masks. Convert the datasets to tensorflow Dataset type."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 171,
    "metadata": {},
    "outputs": [],
@@ -259,12 +366,18 @@
     "test_ids = pad_sequences([bert_tokenizer.convert_tokens_to_ids(txt) for txt in tokenized_texts_test],\n",
     "                          maxlen=MAX_LEN, dtype=\"long\", value=0.0,\n",
     "                          truncating=\"post\", padding=\"post\")\n",
+    "val_ids = pad_sequences([bert_tokenizer.convert_tokens_to_ids(txt) for txt in tokenized_texts_val],\n",
+    "                          maxlen=MAX_LEN, dtype=\"long\", value=0.0,\n",
+    "                          truncating=\"post\", padding=\"post\")\n",
     "\n",
     "train_tags = pad_sequences([label for label in tokenized_labels_train],\n",
-    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"O\"],\n",
+    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"PAD\"],\n",
     "                          truncating=\"post\", padding=\"post\")\n",
     "test_tags = pad_sequences([label for label in tokenized_labels_test],\n",
-    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"O\"],\n",
+    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"PAD\"],\n",
+    "                          truncating=\"post\", padding=\"post\")\n",
+    "val_tags = pad_sequences([label for label in tokenized_labels_val],\n",
+    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"PAD\"],\n",
     "                          truncating=\"post\", padding=\"post\")"
    ]
   },
@@ -275,45 +388,8 @@
    "outputs": [],
    "source": [
     "attention_masks_train = [[float(i > 0) for i in ii] for ii in train_ids]\n",
-    "attention_masks_test = [[float(i > 0) for i in ii] for ii in test_ids]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_inputs, val_inputs, train_tags, val_tags = train_test_split(train_ids, train_tags,\n",
-    "                                                            random_state=2018, test_size=0.1)\n",
-    "train_masks, val_masks, _, _ = train_test_split(attention_masks_train, train_ids,\n",
-    "                                             random_state=2018, test_size=0.1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def example_to_features_new(input_ids,attention_masks,token_type_ids,y):\n",
-    "    return {\"input_ids\": input_ids,\n",
-    "          \"attention_mask\": attention_masks,\n",
-    "          \"token_type_ids\": token_type_ids},y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_ds = tf.data.Dataset.from_tensor_slices((train_inputs, train_masks, np.zeros_like(train_inputs), train_tags)).map(\n",
-    "        example_to_features_new).shuffle(100).batch(12).repeat(5)\n",
-    "val_ds = tf.data.Dataset.from_tensor_slices((val_inputs, val_masks, np.zeros_like(val_inputs), val_tags)).map(\n",
-    "        example_to_features_new).batch(12)\n",
-    "test_ds = tf.data.Dataset.from_tensor_slices((test_ids, attention_masks_test,np.zeros_like(test_ids), test_tags)).map(\n",
-    "        example_to_features_new).batch(12)"
+    "attention_masks_test = [[float(i > 0) for i in ii] for ii in test_ids]\n",
+    "attention_masks_val = [[float(i > 0) for i in ii] for ii in val_ids]"
    ]
   },
   {
@@ -322,12 +398,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = tf.data.Dataset.from_tensor_slices((tf.constant(train_inputs), tf.constant(train_masks), tf.constant(train_tags))).map(\n",
+    "train_ds = tf.data.Dataset.from_tensor_slices((tf.constant(train_ids), tf.constant(attention_masks_train), tf.constant(train_tags))).map(\n",
     "        example_to_features).shuffle(100).batch(12).repeat(5)\n",
-    "val_ds = tf.data.Dataset.from_tensor_slices((tf.constant(val_inputs), tf.constant(val_masks), tf.constant(val_tags))).map(\n",
+    "val_ds = tf.data.Dataset.from_tensor_slices((tf.constant(val_ids), tf.constant(attention_masks_val), tf.constant(val_tags))).map(\n",
     "        example_to_features).batch(12)\n",
     "test_ds = tf.data.Dataset.from_tensor_slices((tf.constant(test_ids), tf.constant(attention_masks_test), tf.constant(test_tags))).map(\n",
     "        example_to_features).batch(12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configure the model and start training."
    ]
   },
   {
@@ -339,6 +422,15 @@
     "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
     "optimizer = tf.keras.optimizers.Adam()\n",
     "metric = tf.keras.metrics.SparseCategoricalAccuracy('accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_model.compile(optimizer=optimizer, loss=loss, metrics=[metric])"
    ]
   },
   {
@@ -373,15 +465,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bert_model.compile(optimizer=optimizer, loss=loss, metrics=[metric])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 177,
    "metadata": {},
    "outputs": [
@@ -403,6 +486,13 @@
    "source": [
     "print(\"Fine-tuning BERT on CONLL2003 dataset\")\n",
     "bert_history = bert_model.fit(train_ds, epochs=2, validation_data=val_ds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate and save the model."
    ]
   },
   {
@@ -432,23 +522,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_predictions(y_pred, indices_to_tags):\n",
-    "    conv_pred = []\n",
-    "    for pred in y_pred:\n",
-    "        conv_tmp = []\n",
-    "        for val in pred:\n",
-    "            val_arg_max = np.argmax(val)\n",
-    "            conv_tmp.append(val_arg_max)\n",
-    "        conv_pred.append(conv_tmp)\n",
-    "    return conv_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 180,
    "metadata": {},
    "outputs": [],
@@ -462,8 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_predicted = convert_predictions(results, indices_to_tags)\n",
-    "# results_predicted = results.round()"
+    "results_predicted = convert_predictions(results, indices_to_tags)"
    ]
   },
   {
@@ -527,6 +599,20 @@
    "source": [
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "print(f\"F1 score: {f1_score(results_true, results_predicted)}\")\n",
+    "print(f\"Accuracy score: {accuracy_score(results_true, results_predicted)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from seqeval.metrics import accuracy_score\n",
+    "from seqeval.metrics import classification_report\n",
+    "from seqeval.metrics import f1_score\n",
     "\n",
     "print(f\"F1 score: {f1_score(results_true, results_predicted)}\")\n",
     "print(f\"Accuracy score: {accuracy_score(results_true, results_predicted)}\")"
@@ -600,9 +686,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nlp] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-nlp-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -614,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
