changes in dataset preprocessing

--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -23,36 +23,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# MAX_LEN = 180\n",
-    "MAX_LEN = 128"
+    "MAX_LEN = 128\n",
+    "TEST_SIZE = 0.2\n",
+    "VAL_SIZE = 0.2\n",
+    "NUM_LABELS = 17"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# tags = {'O':0, 'I-ORG':1, 'I-LOC':2, 'I-MISC':3, 'I-PER':4, 'B-MISC':5, 'B-LOC': 6, 'B-ORG':7, 'PAD':8}\n",
     "tags = {'B-geo':0, 'B-tim':1, 'I-gpe':2, 'I-art':3, 'B-per':4, \\\n",
     "        'I-eve':5, 'B-gpe':6, 'I-geo':7, 'B-eve':8, 'I-nat':9, \\\n",
-    "        'B-nat':10, 'I-org':11, 'I-tim':12, 'I-per':13, 'B-org':14, 'B-art':15, 'O':16, 'PAD':17}"
+    "        'B-nat':10, 'I-org':11, 'I-tim':12, 'I-per':13, 'B-org':14, 'B-art':15, 'O':16}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# indices_to_tags = {0:'O', 1:'I-ORG', 2:'I-LOC', 3:'I-MISC', 4:'I-PER', 5:'B-MISC', 6:'B-LOC', 7:'B-ORG', 8:'PAD'}\n",
     "indices_to_tags = {0:'B-geo', 1:'B-tim', 2:'I-gpe', 3:'I-art', 4:'B-per', \\\n",
     "        5:'I-eve', 6:'B-gpe', 7:'I-geo', 8:'B-eve', 9:'I-nat', \\\n",
-    "        10:'B-nat', 11:'I-org', 12:'I-tim', 13:'I-per', 14:'B-org', 15:'B-art', 16:'O', 17:'PAD'}"
+    "        10:'B-nat', 11:'I-org', 12:'I-tim', 13:'I-per', 14:'B-org', 15:'B-art', 16:'O'}"
    ]
   },
   {
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,20 +102,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = parse_dataset(\"../eng.train\", True)\n",
-    "df.head()\n",
-    "# df = pd.read_csv(\"parsed_train.csv\")\n",
-    "# df.tag.unique()"
+    "### Preprocessing of the GMB dataset. This function is called only once at the beginning and then the dataset is saved to a json file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,51 +153,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = parse_ner_dataset(True)"
+    "df = parse_dataset(\"../eng.train\", True)\n",
+    "df.head()\n",
+    "# df = pd.read_csv(\"parsed_train.csv\")\n",
+    "# df.tag.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# df = parse_ner_dataset(True)\n",
+    "df = pd.read_json(\"parsed_gmb_bert.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence_idx</th>\n",
+       "      <th>sentences</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[Thousands, of, demonstrators, have, marched, ...</td>\n",
+       "      <td>[O, O, O, O, O, O, B-geo, O, O, O, O, O, B-geo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[Families, of, soldiers, killed, in, the, conf...</td>\n",
+       "      <td>[O, O, O, O, O, O, O, O, O, O, O, O, O, O, O, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[They, marched, from, the, Houses, of, Parliam...</td>\n",
+       "      <td>[O, O, O, O, O, O, O, O, O, O, O, B-geo, I-geo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[Police, put, the, number, of, marchers, at, 1...</td>\n",
+       "      <td>[O, O, O, O, O, O, O, O, O, O, O, O, O, O, O]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[The, protest, comes, on, the, eve, of, the, a...</td>\n",
+       "      <td>[O, O, O, O, O, O, O, O, O, O, O, B-geo, O, O,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sentence_idx                                          sentences  \\\n",
+       "0             1  [Thousands, of, demonstrators, have, marched, ...   \n",
+       "1             2  [Families, of, soldiers, killed, in, the, conf...   \n",
+       "2             3  [They, marched, from, the, Houses, of, Parliam...   \n",
+       "3             4  [Police, put, the, number, of, marchers, at, 1...   \n",
+       "4             5  [The, protest, comes, on, the, eve, of, the, a...   \n",
+       "\n",
+       "                                                tags  \n",
+       "0  [O, O, O, O, O, O, B-geo, O, O, O, O, O, B-geo...  \n",
+       "1  [O, O, O, O, O, O, O, O, O, O, O, O, O, O, O, ...  \n",
+       "2  [O, O, O, O, O, O, O, O, O, O, O, B-geo, I-geo...  \n",
+       "3      [O, O, O, O, O, O, O, O, O, O, O, O, O, O, O]  \n",
+       "4  [O, O, O, O, O, O, O, O, O, O, O, B-geo, O, O,...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pad_token = 0\n",
-    "pad_token_segment_id = 0\n",
-    "max_length = 180\n",
-    "def convert_to_input(reviews):\n",
-    "    input_ids, attention_masks, token_type_ids = [], [], []\n",
-    "\n",
-    "    for x in tqdm(reviews, position=0, leave=True):\n",
-    "        inputs = bert_tokenizer.encode_plus(x, max_length=max_length)\n",
-    "\n",
-    "        i, t = inputs[\"input_ids\"], inputs[\"token_type_ids\"]\n",
-    "        m = [1] * len(i)\n",
-    "\n",
-    "        padding_length = max_length - len(i)\n",
-    "#         print(\"##########################X\", x)\n",
-    "#         print(\"### I \", i)\n",
-    "#         print(\"### M \", m)\n",
-    "#         print(\"### T \", t)\n",
-    "        i = i + ([pad_token] * padding_length)\n",
-    "        m = m + ([0] * padding_length)\n",
-    "        t = t + ([pad_token_segment_id] * padding_length)\n",
-    "        \n",
-    "        input_ids.append(i)\n",
-    "        attention_masks.append(m)\n",
-    "        token_type_ids.append(t)\n",
-    "\n",
-    "    return [np.asarray(input_ids),\n",
-    "            np.asarray(attention_masks)]"
    ]
   },
   {
@@ -211,14 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize_and_preserve_labels(sentence, text_labels):\n",
     "    tokenized_sentence = []\n",
     "    labels = []\n",
-    "\n",
+    "    \n",
+    "    tokenized_sentence.append(\"CLS\")\n",
+    "    labels.append(tags[\"O\"])\n",
     "    for word, label in zip(sentence, text_labels):\n",
     "\n",
     "        # Tokenize the word and count # of subwords the word is broken into\n",
@@ -230,16 +290,18 @@
     "\n",
     "        # Add the corresponding tag to the first token of the word and \"PAD\" tag to the rest of the tokens\n",
     "#         labels.append(label)\n",
-    "        labels.append(tags[label])\n",
-    "        labels.extend([tags[\"PAD\"]] * (n_subwords - 1))\n",
-    "#         labels.extend([label] * n_subwords)\n",
-    "\n",
+    "#         labels.append(tags[label])\n",
+    "#         labels.extend([tags[\"PAD\"]] * (n_subwords - 1))\n",
+    "        labels.extend([tags[label]] * n_subwords)\n",
+    "    \n",
+    "    tokenized_sentence.append(\"SEP\")\n",
+    "    labels.append(tags[\"O\"])\n",
     "    return tokenized_sentence, labels\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,22 +351,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config =BertConfig.from_pretrained(\"bert-base-cased\",num_labels=18)\n",
+    "config =BertConfig.from_pretrained(\"bert-base-cased\",num_labels=NUM_LABELS)\n",
     "bert_model = TFBertForTokenClassification.from_pretrained(\"bert-base-cased\", config=config)\n",
     "bert_tokenizer = BertTokenizer.from_pretrained(\"bert-base-cased\", do_lower_case=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_model.layers[-1].activation = tf.keras.activations.softmax"
+    "# bert_model.layers[-1].activation = tf.keras.activations.softmax"
    ]
   },
   {
@@ -316,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +406,9 @@
     "#                                              random_state=2018, test_size=0.1)\n",
     "\n",
     "\n",
-    "data_train, test_df = train_test_split(data, random_state=2018, test_size=0.3)\n",
-    "data_train, data_val = train_test_split(data_train, random_state=2018, test_size=0.2)\n"
+    "\n",
+    "data_train, test_df = train_test_split(data, random_state=2018, test_size=TEST_SIZE)\n",
+    "data_train, data_val = train_test_split(data_train, random_state=2018, test_size=VAL_SIZE)\n"
    ]
   },
   {
@@ -357,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19698/19698 [00:25<00:00, 773.17it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 22512/22512 [00:27<00:00, 832.94it/s]\n"
      ]
     }
    ],
@@ -379,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10554/10554 [00:13<00:00, 793.11it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 7036/7036 [00:11<00:00, 601.19it/s]\n"
      ]
     }
    ],
@@ -401,14 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4925/4925 [00:05<00:00, 853.07it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 5629/5629 [00:08<00:00, 650.67it/s]\n"
      ]
     }
    ],
@@ -430,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,19 +508,19 @@
     "                          truncating=\"post\", padding=\"post\")\n",
     "\n",
     "train_tags = pad_sequences([label for label in tokenized_labels_train],\n",
-    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"PAD\"],\n",
+    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"O\"],\n",
     "                          truncating=\"post\", padding=\"post\")\n",
     "test_tags = pad_sequences([label for label in tokenized_labels_test],\n",
-    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"PAD\"],\n",
+    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"O\"],\n",
     "                          truncating=\"post\", padding=\"post\")\n",
     "val_tags = pad_sequences([label for label in tokenized_labels_val],\n",
-    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"PAD\"],\n",
+    "                          maxlen=MAX_LEN, dtype=\"long\", value=tags[\"O\"],\n",
     "                          truncating=\"post\", padding=\"post\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +531,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((19698, 128), (19698, 128), (19698, 128))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(train_ids), np.shape(attention_masks_train), np.shape(train_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,13 +949,6 @@
    "source": [
     "annot_confusion_matrix(list(results_true), list(results_predicted))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -891,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
