--- a/BERT PyTorch.ipynb
+++ b/BERT PyTorch.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,22 +686,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### You can try the model by executing the top cell, one of the tag cells in the beginning and everything after this cell"
+    "### You can try the model by executing the top cell, one of the tag cells in the beginning and everything after this cell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading a model (see docs for different options)\n",
-    "model = torch.load('gmb_ner_bert_pt.pt', map_location=torch.device('cuda'))"
+    "model = torch.load('gmb_ner_bert_pt.pt', map_location=torch.device('cuda'))\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-cased', do_lower_case=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
